2007-04-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_worker_feed.py (FakeWorkerBrain): Add method
	to wait on feed server receiving FD.
	(FakeComponent): Add method to waith on receiving fd from feed
	medium.
	(TestFeedServer.assertAdditionalFDsOpen): Temporarily disable
	(TestFeedServer.testConnectWithoutDroppingPB.cleanup): Add a
	comment.
	(TestFeedServer.testConnectWithoutDroppingPB): New test, does not
	yet work

2007-04-25  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* configure.ac:
	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/rtsp/Makefile.am:
	* flumotion/component/producers/rtsp/__init__.py:
	* flumotion/component/producers/rtsp/rtsp.py (Rtsp,
	  Rtsp.get_pipeline_string):
	* flumotion/component/producers/rtsp/rtsp.xml:
	New rtsp-producer component, for receiving streams from rtsp.
	Tested with an Axis network camera.

2007-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpfile/file.py (File, File.__init__,
	  File.render, File.terminateSimpleRequest, File.renderAuthenticated,
	  File.createSimilarFile):
	  Comment and document.
	  Remove bogus pychecker inhibition.
	  Privatize File._component.
	  Instead of commenting badly named variables, use self-documenting
	  names.
	  Be a bit more strict about range headers we accept.
	  Make the start/end logic shorter and easier to grok by adding
	  first/last variables and simplifying.
	* flumotion/test/test_misc_httpfile.py
	  (TestTextFile.testWrongEmptyBytesRange,
	  TestTextFile.testWrongNoRange, TestTextFile.testWrongTypeRange,
	  TestTextFile.testRangeSet):
	  Add two tests, fix one.

2007-04-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_misc_httpfile.py:
	  Add a test before refactoring.
	  Increases coverage for file.py from 19% to 79%.

2007-04-24  Andy Wingo  <wingo@pobox.com>
